# simple_mpc_publisher

./: CMakeLists.txt  package.xml
config/: mpc.param.yaml  trajectory_params.yaml
include/simple_mpc_publisher/: simple_mpc_publisher.hpp
launch/: simple_mpc_publisher.launch.py
src/: simple_mpc_publisher.cpp
